Prevent double scrollbars in firefox
To reproduce this:

* type in lots of lines of text
* shrink the form field height by dragging the bottom right corner up higher
* scroll to the bottom of the text area
* try scrolling again: it shouldn't
    * BEFORE: after reaching the bottom, another scrollbar for the parent container would appear and firefox would scroll further down and the toolbar would move upwards inside the container.

--- a/packages/components/src/FormField/FormField.module.css
+++ b/packages/components/src/FormField/FormField.module.css
@@ -377,6 +377,7 @@
     var(--field--toolbarHeight) + var(--field--toolbarPaddingBottom) +
       var(--field--toolbarGradientHeight)
   );
+  height: 100%;
 }
 
 .toolbarWrapper {
